cmake_minimum_required(VERSION 3.27)
project(asembler2 C)

set(CMAKE_C_STANDARD 11)

add_executable(asembler2
        main.c
        globals.h
        binary.h
        binary.c
        memory.h
        memory.c
        memory.c
        files.h
        files.h
        files.c
        linked_list.c
        macros.h
        macros.c
        macros.c
        firsrt_pass.c
        firsrt_pass.h
        firsrt_pass.h)
